@@ -1,32 +1,18 @@
 // Jest Snapshot v1, https://goo.gl/fbAQLP
 
 exports[`ExplorerToggle basic 1`] = `
-<ExplorerToggle
-  onToggle={[Function]}
-  storeSubscription={
-    Subscription {
-      "listeners": Object {
-        "clear": [Function],
-        "get": [Function],
-        "notify": [Function],
-        "subscribe": [Function],
-      },
-      "onStateChange": [Function],
-      "parentSub": undefined,
-      "store": Object {
-        "clearActions": [Function],
-        "dispatch": [Function],
-        "getActions": [Function],
-        "getState": [Function],
-        "replaceReducer": [Function],
-        "subscribe": [Function],
-      },
-      "unsubscribe": [Function],
-    }
-  }
+<Button
+  accessibleLabel={null}
+  className="submenu-trigger"
+  href="#"
+  icon="folder-open-inverse"
+  isLoading={false}
+  onClick={[Function]}
+  preventDefault={true}
+  target={null}
 >
   <span>
     To infinity and beyond!
   </span>
-</ExplorerToggle>
+</Button>
 `;
